--- a/repo/pom.xml
+++ b/repo/pom.xml
@@ -114,6 +114,12 @@
 			<type>war</type>
 		</dependency>
 		<dependency>
+			<groupId>org.alfresco</groupId>
+			<artifactId>alfresco-repository</artifactId>
+			<version>4.2.b</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.21</version>
@@ -199,12 +205,12 @@
 					<configuration>
 						<files>
 						    <file>
-						    	<file>target/config/alfresco-global.properties</file>
+						    	<file>target/config/</file>
 						    	<todir>shared/classes</todir>
 						    </file>
 						</files>
 						<properties>
-							<cargo.jvmargs>-Xmx768m -XX:MaxPermSize=256m</cargo.jvmargs>
+							<cargo.jvmargs>-Xmx768m -XX:MaxPermSize=256m -Xdebug -Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n</cargo.jvmargs>
 						</properties>
 					</configuration>
 				</configuration>
