Initial implementation of Add Item custom action.

--- a/share/src/main/resources/alfresco/messages/devcon.properties
+++ b/share/src/main/resources/alfresco/messages/devcon.properties
@@ -1,2 +1,9 @@
+action.add_item=Add Item
+
 aspect.devcon_asset=Asset
 aspect.devcon_purchaseOrder=Purchase Order
+
+add-item.field.item=Item
+
+message.add_item.success=Item Added
+message.add_item.failure=Item Addition Failed
