--- a/share/pom.xml
+++ b/share/pom.xml
@@ -161,6 +161,7 @@
 							<cargo.rmi.port>8206</cargo.rmi.port>
 							<cargo.servlet.port>8081</cargo.servlet.port>
 							<cargo.tomcat.ajp.port>8010</cargo.tomcat.ajp.port>
+							<cargo.jvmargs>-Xmx768m -XX:MaxPermSize=256m -Xdebug -Xrunjdwp:transport=dt_socket,address=8001,server=y,suspend=n</cargo.jvmargs>
 						</properties>
 					</configuration>
 				</configuration>
